v0.21.0
- MANTA-167 semi-mapped som pair correction
- MANTA-156 filter out assm poison reads
- MANTA-161 make assembly robust to seed k-mer selection
- MANTA-164 batch retrieve assembly mate reads
- MANTA-158 improve small indel contig alignment specificity
- MANTA-146 use MAPQ0 mate reads in assembly
- MANTA-48 use shadow reads for split scoring
- MANTA-157 improve shadow read filter
- MANTA-153 fix diploid prior
- MANTA-150 fix SV scoring size cutoff
- MANTA-148 check bam records for region errors
- RNA: rna-scoring
v0.20.1
- Lower default min candidate size to 8
v0.20.0
- MANTA-136 turn on conservative large insertion calling
- MANTA-126 multi-junction SV scoring
- MANTA-131 improve large somatic sv specificity with expanded
supporting evidence search
- RNA: track candidate orientation
v0.19.0
- MANTA-127 RG based insert stats (default off) 
- MANTA-128 Improved pair orientation estimation and error checks
- RNA: Improve fusion specificity
- MANTA-125 add experimental large insertion calling (default off)
- MANTA-125 add tier2 permissive split score to reduce small somatic
FP deletions
- MANTA-125 add tier2 chimera rate to reduce somatic FP calls 
v0.18.0
- MANTA-125 modify pair weight for small SVs
- MANTA-120 Improve stability of SV scoring as a function of read length
v0.17.0
- Filter SA split read segments by MAPQ value
- MANTA-116 better handle BWA-mem SA split-reads for inversions
- MANTA-118 static libstdc++ for gcc 4.5+
v0.16.0
- MANTA-117 add somatic quality score
- fix SA tag parsing
- MANTA-27 accept bam/fasta filenames with spaces
v0.15.0
- MANTA-108 combine clip/semi-aligned evidence detection, don't detect
overlapping reads as assembly evidence
- MANTA-98 make fewer bam scans during scoring
- MANTA-106 add high depth limit to candgen and assmbler
- MANTA-75 Better match reads to SV candidates to improve
runtime and lower repeat observations (part 2)
- MANTA-105 filter poorly supported candidates to reduce per-edge compute time