@@ -1,3 +1,5 @@
+- MANTA-170 improve pair allele support accuracy
+- MANTA-139 add shadow and chimera reads into pair counts
 v0.21.0
 - MANTA-167 semi-mapped som pair correction
 - MANTA-156 filter out assm poison reads
